# devtools_scicomp_project_2025

./: .gitignore  Makefile  README.md  data.json  pyproject.toml  requirements.txt  run.py.lprof  run.py.prof
experiments/: config.yaml  config_numpy.yaml  config_spambase.yaml  config_test.yaml
logs/: data.json  numpy_knn_classifier.txt  plot_results.py  slow_knn_classifier.txt  spam_numba_knn_classifier.txt  spam_numpy_knn_classifier.txt
scripts/: run.py  run_numba.py
shell/: submit.sh
src/pyclassify/: classifier.py  datamodule.py  model.py  module.py  test_numba.py  utils.py
test/: test_.py
